@@ -4,8 +4,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.kde.org/standards/kxmlgui/1.0 http://www.kde.org/standards/kxmlgui/1.0/kxmlgui.xsd" >
   <ToolBar name="mainToolBar" >
+  	<Action name="dialNumber"/>
   </ToolBar>
   <MenuBar>
+    <Menu name="tools">
+      <Action name="dialNumber"/>
+    </Menu>
     <Menu name="settings">
       <Action name="showNotifySettings" append="configure_merge"/>
       <Action name="showSettings" append="configure_merge"/>
